@@ -130,6 +130,8 @@ Mask(RVE)
 
 Mask(VECTOR)
 
+Mask(DSP)
+
 mriscv-attribute
 Target Report Var(riscv_emit_attribute_p) Init(-1)
 Emit RISC-V ELF attribute.
